--- a/public/css/aafu_main.css
+++ b/public/css/aafu_main.css
@@ -4,6 +4,6 @@
   --primaryLinks: #B48EAD;
   --secondaryBg: #4C566A;
   --secondaryText: white;
-  --secondaryLinks: #B48EAD;
+  --secondaryLinks: #81A1C1;
   --shadow: #2E3440;
 }
